2007-07-08  Wakaba  <wakaba@suika.fam.cx>

	* DOMElement.pm (attributes): Implemented.

	* DOMException.pm (INUSE_DEFINITION_ERR): New error type.

	* DocumentType.pm (entities, general_entities,
	notations, element_types): Implemented.

	* ElementTypeDefinition.pm (attribute_definitions): Implemented.

	* NamedNodeMap.pm: New Perl module.

2007-07-08  Wakaba  <wakaba@suika.fam.cx>

	* Attr.pm, AttributeDefinition.pm, DOMCharacterData.pm,
	DOMDocument.pm, DocumentType.pm, ElementTypeDefinition.pm,
	Node.pm, Notation.pm, ProcessingInstruction.pm (append_child, 
	insert_before, replace_child): Implemented.

	* DOMException.pm (HIERARCHY_REQUEST_ERR, NOT_FOUND_ERR): Implemented.

	* Node.pm (remove_child): Implemented.

2007-07-07  Wakaba  <wakaba@suika.fam.cx>

	* Node.pm (==, is_equal_node): Implemented.
	(is_same_node): Implemented.
	(get_feature, get_user_data, set_user_data): Implemented.
	(is_supported): Implemented.
	
2007-07-07  Wakaba  <wakaba@suika.fam.cx>

	* DOMDocument.pm (get_element_by_id): Implemented.
	(create_document): Implemented.

	* DOMException.pm (EXTERNAL_OBJECT_ERR, INUSE_DOCTYPE_ERR): New
	errors.
	(QNAME_NULLNS_ERR): New errors.

	* DocumenType.pm (create_document_type): Implemented.

2007-07-07  Wakaba  <wakaba@suika.fam.cx>

	* CDATASection.pm (is_element_content_whitespace): New.

	* DOMElement.pm (has_attribute): Alpha version.
	(create_element, create_element_ns): Implemented.

	* DocumentType.pm (get_general_entity_node): Alpha version.

	* EntityReference.pm (create_entity_reference): Implemented.

	* ProcessingInstruction.pm (create_processing_instruction): Implemented.

2007-07-07  Wakaba  <wakaba@suika.fam.cx>

	* Attr.pm (create_attribute, create_attribute_ns): Implemented.

	* DOMDocument.pm: Load character classes from |Char::Class::XML|.
	(compat_mode): Check |defined| not to be warned as "uninitialized"
	when |{manakai_compat_mode}| is |undef|.

	* DOMException.pm (INVALID_CHARACTER_ERR, NAMESPACE_ERR): Added.
