@@ -1,5 +1,9 @@
 2007-07-08  Wakaba  <wakaba@suika.fam.cx>
 
+	* DOM-StringExtended.t: New test script.
+
+2007-07-08  Wakaba  <wakaba@suika.fam.cx>
+
 	* DOM-Document.t, DOM-Node.t, DOM-NodeList.t: Some tests are modified so
 	that no |WRONG_DOCUMENT_ERR| is raised.
 
