@@ -1,5 +1,17 @@
 2007-07-08  Wakaba  <wakaba@suika.fam.cx>
 
+	* StringExtended.pm: New Perl module.
+
+	* DOMCharacterData.pm (length, append_data, delete_data,
+	insert_data, replace_data, substring_data): Implemented.
+
+	* DOMException.pm (INDEX_SIZE_ERR): Implemented.
+
+	* Text.pm (is_element_content_whitespace, whole_text,
+	split_text): Implemented.
+
+2007-07-08  Wakaba  <wakaba@suika.fam.cx>
+
 	* DOMElement.pm (attributes): Implemented.
 
 	* DOMException.pm (INUSE_DEFINITION_ERR): New error type.
